--- a/template/index.html
+++ b/template/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ name }}</title>
+    <link rel="stylesheet" href="/build.css">
   </head>
   <body>
     <script src='/build.js'></script>
